--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,49 @@
 @import "tailwindcss";
+
+/*Animações para o carrosel*/
+@keyframes roll-in-left {
+  from {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes roll-in-right {
+  from {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.animate-roll-in-left {
+  animation: roll-in-left 0.6s ease-out forwards;
+}
+
+.animate-roll-in-right {
+  animation: roll-in-right 0.6s ease-out forwards;
+}
+
+
+/*Animação de notificação*/
+@keyframes slideDown {
+  0% {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.animate-slideDown {
+  animation: slideDown 0.4s ease-out forwards;
+}
